# houdini_dynamic_shelf

./: README.md  build.sh  package.py  pyproject.toml
dynamic_shelf/: __init__.py  constants.py  core.py  data.py
dynamic_shelf/startup/python3.11libs/: uiready.py
tests/: test_core.py
tests/data/item01/: item_01.shelf
tests/data/item02/: item_02.shelf
tests/data/item03/: item_03.shelf
tests/data/item04/: item_04.shelf
tests/reference_files/: reference.shelf
